--- a/Distance_of_HyperTRIBE_edited_sites_to_nearest_HOMER_motif.Rmd
+++ b/Distance_of_HyperTRIBE_edited_sites_to_nearest_HOMER_motif.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Syncrip: Distance of HyperTRIBE edited sites to nearest HOMER motif'
-author: "Karen Chu"
+author: "K Chu"
 date: "3/5/2019"
 output: html_document
 ---
